--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,15 @@
+APScheduler==3.11.2
+blinker==1.9.0
+click==8.3.1
+colorama==0.4.6
 Flask==2.3.3
 Flask-MySQLdb==1.0.1
+itsdangerous==2.2.0
+Jinja2==3.1.6
+MarkupSafe==3.0.3
+mysqlclient==2.2.7
+psutil==7.2.0
+schedule==1.2.2
+tzdata==2025.3
+tzlocal==5.3.1
 Werkzeug==2.3.7
